<resources>
    <string name="app_name">SoundProfile</string>
    <string name="action_settings">Settings</string>

    <string name="facebook_app_id">1855067568100132</string>
    <string name="google_maps_key">AIzaSyCGTd3ICTJLIrwW9hwUTq-ynYuGqyruHik</string>
    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="title_activity_dashboard">Smart Profile Manager</string>

    <string name="prompt_delete_default_profile">You cannot remove default profile !</string>

    <string name="prompt_discard_profile">Discard profile ?</string>

    <string name="prompt_discard_profile_changes">Discard profile changes ?</string>

    <string name="prompt_save_default_profile_changes">Discard profile changes ?</string>

    <string name="prompt_system_write_permission">Allow modifying system changes automate ringtones !</string>

    <string name="prompt_profile_name">Profile Name</string>

    <string name="title_notification_volume">Notification volume</string>
    <string name="title_media_volume">Media/Music volume</string>
    <string name="title_alarm_volume">Alarms volume</string>
    <string name="title_call_volume">Voice call volume</string>

    <string name="title_notification_volume_disc">Whether to change the notification volume when this profile is activated</string>
    <string name="title_media_volume_disc">Whether to change the media volume when this profile is activated</string>
    <string name="title_alarm_volume_disc">Whether to change the alarm volume when this profile is activated</string>
    <string name="title_system_volume_disc">Whether to change the system volume when this profile is activated</string>
    <string name="title_call_volume_disc">Whether to change the in call volume when this profile is activated</string>

    <string name="title_ringtone_picker">Ringtone</string>

    <string name="title_notificationtone_picker">Notification tone</string>

    <string name="start_geofence_service">Starting geofence transition service</string>
    <string name="entering_geofence">Entering the GeoFence zone</string>
    <string name="exiting_geofence">Exiting the GeoFence zone</string>
    <string name="unknown_geofence_transition">Unknown GeoFence zone</string>
    <string name="geofence_transition_invalid_type">Invalid transition type</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_new_profile">New Profile</string>
    <string name="title_activity_profile">Profiles</string>

    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_default_profile">Default Profile</string>
    <string name="default_profile_description">Activate this profile when I am in unknown area.</string>
    <string name="sign_in_facebook">Log in with Facebook</string>
    <string name="sign_in_google">Log in with Google</string>
    <string name="current_profile">Your current audio settings</string>
    <string name="text_off">Quick Switch to SILENT</string>
    <string name="text_on">Quick Switch to LOUD</string>
    <string name="sleep_hours">Sleepy Hours</string>
    <string name="sleep_hours_warning_start">You\'ve Defined sleepy hours from </string>
    <string name="sleep_hours_warning_end">\n Remove Sleepy Hours ?</string>
    <string name="wifi_setting_description">Auto disable Wi-Fi during sleepy hours.</string>
    <string name="title_activity_advanced_settings">Advanced Settings</string>
    <string name="auto_disable_wifi">autoDisableWifi</string>
    <string name="advanced_settings">Advanced Settings</string>
    <string name="geofence_radius_setting_description">Geofence radius in meters.</string>
    <string name="geofence_radius_setting">Apply to my existing profiles.</string>
    <string name="geofence_radius">Geofence Radius</string>

    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="change_theme">Change app theme</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_purple">Purple</string>
    <string name="theme_green">Green</string>
    <string name="theme">theme</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="key">key</string>
    <string name="title_ringtone_volume">Ringtone volume</string>
    <string name="title_system_volume"><![CDATA[Touch feedback & System]]></string>
    <string name="settings_wifi">Wi-Fi</string>
    <string name="title_no_change">Make no change</string>
    <string name="title_on">On</string>
    <string name="title_off">Off</string>
    <string name="settings_bluetooth">Bluetooth</string>
    <string name="seekbar_default_value">0</string>
    <string name="firebase_profiles">profiles</string>
    <string name="firebase_profile_name">profileName</string>
    <string name="firebase_profile_latitude">latitude</string>
    <string name="firebase_profile_longitude">longitude</string>
    <string name="firebase_profile_ringtone_volume">ringtoneVolume</string>
    <string name="firebase_profile_music_volume">musicVolume</string>
    <string name="firebase_profile_alarm_volume">alarmVolume</string>
    <string name="firebase_profile_call_volume">callVolume</string>
    <string name="firebase_profile_ringtone_chk">chkRinger</string>
    <string name="firebase_profile_music_chk">chkMedia</string>
    <string name="firebase_profile_alarm_chk">chkAlarm</string>
    <string name="firebase_profile_call_chl">chkCall</string>
    <string name="firebase_profile_notification_volume">notificationVolume</string>
    <string name="firebase_profile_system_volume">systemVolume</string>
    <string name="firebase_profile_notification_chk">chkNotification</string>
    <string name="firebase_profile_system_chl">chkSystem</string>
    <string name="firebase_default_profile">default</string>
    <string name="firebase_profile_ringtone_uri">ringToneURI</string>
    <string name="firebase_profile_notification_tone_uri">notificationToneURI</string>
    <string name="unknown_area">Unknown Area</string>
    <string name="firebase_profile_wifi_setting">wifiSetting</string>
    <string name="firebase_profile_bluetooth_setting">bluetoothSetting</string>
    <string name="order_id_mock">O122342</string>
    <string name="price_mock">500</string>
    <string name="requests_count_mock">5</string>
    <string name="requests_count_badge">5</string>
    <string name="weight_mock">25</string>
    <string name="weight_badge">30</string>
    <string name="pledge_mock">30</string>
    <string name="pledge_badge">25</string>
    <string name="sender_badge">Mihir</string>
    <string name="client_name_mock">Some client</string>
    <string name="rating_mock">5</string>
    <string name="from_badge">FRom</string>
    <string name="content_from1_mock">PARTY NAME</string>
    <string name="content_from2_mock">FROM</string>
    <string name="to_badge">TO</string>
    <string name="content_to1_mock">TO PARTY</string>
    <string name="content_to2_mock">TOOO</string>
    <string name="delivery_date_badge">31/08/2017</string>
    <string name="delivery_time_mock">12:14 PM</string>
    <string name="delivery_date_mock">12:14 PM</string>
    <string name="deadline_badge">01/09/2017</string>
    <string name="deadline_time_mock">12:00 PM</string>
    <string name="request_btn_text">GOOO</string>
    <string name="btn_annotation_mock">YOO</string>
    <string name="dummy_value">0</string>
    <string name="text_start_time">I go to bed at :</string>
    <string name="text_end_time">I wake up at :</string>
    <string name="text_dummy_time">00:00</string>
    <string name="text_button_sleepy_hours">Enable sleepy hours</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="promps_double_back">Tap back again to exit App.</string>
    <string name="firebase_default_profiles">default</string>
    <string name="startHour">startHour</string>
    <string name="startMinute">startMinute</string>
    <string name="endHour">endHour</string>
    <string name="endMinute">endMinute</string>
    <string name="tooltip_geofence_radius">Ideal radius is 100 meters, keeping this value to very low will increase power consumption.</string>
    <string name="no_profiles">It\'s lonely here !</string>
    <string name="new_profile">Create new Profile Now.</string>
    <string name="title_new_profile">New Profile</string>
    <string name="mKey">mKey</string>
</resources>
