<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/fab_margin"
    tools:context="com.appontherocks.soundprofile.fragments.SleepyHoursFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layoutStartHours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/fab_margin"
            android:weightSum="1">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:text="@string/text_start_time" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/txtStartTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/text_dummy_time" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutEndHours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/fab_margin"
            android:weightSum="1">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:text="@string/text_end_time" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/txtEndTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/text_dummy_time" />
        </LinearLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnEnableSleepyHours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_button_sleepy_hours" />

    </LinearLayout>

</FrameLayout>
